--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -6,19 +6,21 @@
   background: rgba(139, 92, 246, 0.1);
   border: 1px solid rgba(139, 92, 246, 0.3);
   color: #a78bfa;
-  padding: 3px 12px;
+  padding: 0.125em 0.625em;
   border-radius: 100px;
-  font-size: 0.75rem;
-  margin-left: 10px;
+  font-size: 0.625em;
+  font-weight: 100;
+  margin-left: 0.825em;
   display: inline-flex;
   align-items: center;
+  margin-top: 0.3em;
 }
 
 .gpu-indicator {
   background: rgba(16, 185, 129, 0.1);
   border: 1px solid rgba(16, 185, 129, 0.3);
   color: #10b981;
-  padding: 8px 12px;
+  padding: .425em .925em;
   border-radius: 100px;
   font-size: 0.75rem;
   margin-left: 10px;
